[gd_scene load_steps=10 format=3 uid="uid://1nwcobqt3jwl"]

[ext_resource type="Script" uid="uid://dtjxv4sh0s1u0" path="res://Microjuegos/Branco/9_Flappy Birds con gatitos/Script/9_Flappy_cat.gd" id="1_5gypy"]
[ext_resource type="Texture2D" uid="uid://cnpij3bucijph" path="res://Fondos/Fondocielo.png" id="2_sme5o"]
[ext_resource type="Script" uid="uid://dpsbd1kgmkrln" path="res://Microjuegos/Branco/9_Flappy Birds con gatitos/Script/gatito_volador.gd" id="3_fnubj"]
[ext_resource type="Texture2D" uid="uid://cr76tkti0tbbx" path="res://Microjuegos/Branco/9_Flappy Birds con gatitos/Sprites/GLOBOPNG.png" id="4_5c2tq"]
[ext_resource type="Texture2D" uid="uid://b328in2qwlxcr" path="res://Microjuegos/Branco/9_Flappy Birds con gatitos/Sprites/Mario_pipe.png" id="5_k8vc0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofj8a"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.486275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0klux"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.486275)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sme5o"]
radius = 19.0
height = 132.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thpx6"]
size = Vector2(202, 578.625)

[node name="FlappyCat2" type="Node2D"]
script = ExtResource("1_5gypy")

[node name="Cielo" type="TextureRect" parent="."]
offset_right = 1930.0
offset_bottom = 1086.0
texture = ExtResource("2_sme5o")

[node name="BarraTiempo" type="ProgressBar" parent="."]
offset_left = 762.0
offset_top = 24.0
offset_right = 1162.0
offset_bottom = 51.0
max_value = 1.5
value = 1.5
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TimerCambio" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LabelControles" type="Label" parent="."]
offset_left = 680.0
offset_top = 846.0
offset_right = 1116.0
offset_bottom = 1069.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_ofj8a")
text = "Salta con:
Espacio!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInstruccion" type="Label" parent="."]
offset_left = 525.0
offset_top = 34.0
offset_right = 1298.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_0klux")
text = "Â¡No choques!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GatitoVolador" type="CharacterBody2D" parent="."]
position = Vector2(134, 621)
script = ExtResource("3_fnubj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GatitoVolador"]
position = Vector2(0.8125, -0.8125)
shape = SubResource("CapsuleShape2D_sme5o")
debug_color = Color(0.852663, 0.203419, 0.76259, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="GatitoVolador"]
position = Vector2(26, -140)
scale = Vector2(1, 1.006)
texture = ExtResource("4_5c2tq")

[node name="Tuberia1" type="StaticBody2D" parent="." groups=["ObstaculoVolador"]]
position = Vector2(482, 939)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia1"]
position = Vector2(137, -73)
shape = SubResource("RectangleShape2D_thpx6")

[node name="Sprite2D" type="Sprite2D" parent="Tuberia1"]
position = Vector2(139.5, -131.5)
scale = Vector2(1.77447, 1.82333)
texture = ExtResource("5_k8vc0")

[node name="Tuberia2" type="StaticBody2D" parent="." groups=["ObstaculoVolador"]]
position = Vector2(1341, 932)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia2"]
position = Vector2(21, -144)
shape = SubResource("RectangleShape2D_thpx6")

[node name="Sprite2D" type="Sprite2D" parent="Tuberia2"]
position = Vector2(24.5, -148.25)
scale = Vector2(1.95319, 2.51166)
texture = ExtResource("5_k8vc0")

[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
